Fix album title layout on narrow screen with NC 30+
Nextcloud 30 has added a default top margin for the <h2> element which messed
up our albums view layout in the "mobile" mode.

--- a/css/app/music-albums.css
+++ b/css/app/music-albums.css
@@ -7,7 +7,7 @@
  * @author Morris Jobke <hey@morrisjobke.de>
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
- * @copyright Pauli Järvinen 2016 - 2024
+ * @copyright Pauli Järvinen 2016 - 2025
  */
 
 /**
@@ -42,6 +42,7 @@
 	max-width: 424px;
 	padding-bottom: 21px;
 	white-space: nowrap;
+	margin: 0;
 }
 
 .album-area > h2.placeholder {
